# Chaum-Pedersen-Protocol

./: Cargo.toml  README.md  build.rs
chaum_pedersen/: Cargo.toml
chaum_pedersen/src/: lib.rs
proto/: auth.proto
src/: auth.rs  prover.rs  verifier.rs
zkp_chaum_pedersen/: Cargo.toml
zkp_chaum_pedersen/src/: lib.rs
