[package]
name = "Chaum-Pedersen-Protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.42.0"
tonic = "0.12.3"
num-bigint = "0.4.6"
chaum_pedersen = { path = "chaum_pedersen" }
tonic-build = "0.12.3"
prost = "0.13.4"
rand = "0.8.5"
tokio-stream = "0.1.17"

[build-dependencies]
tonic-build = "0.12.3"

[workspace]
members = [
    "chaum_pedersen",
]

[[bin]]
name = "verifier"
path = "./src/verifier.rs"

[[bin]]
name = "prover"
path = "./src/prover.rs"